--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      font-size: 12px;
     ">
     <p>版权所有:jangyi.com</p>
-      <a href="https:jiangyi.com/">友情链接</a>>
+      <a href="https:jiangyi.com/">友情链接</a>
       </div>
   </body>
 </html>
