--- a/new.html
+++ b/new.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>姜毅的个人主页</title>
     </head>  
-      <body style="margin: 0";>
-        <h1>正安网站来了</h1》
+    <body style="margin: 0;">
+       <h1>正安网站来了</h1>
   </body>
 </html>
